--- a/src/template.html
+++ b/src/template.html
@@ -28,10 +28,9 @@
             <div class="main-navbar__item">Support</div>
         </div>
         <div class="main-center">
-            <div class="main-center-content">
-                <div class="main-center-content__item-text heading">The best looks; Top comfort</div>
-                <div class="main-center-content__item-text name">Comfy Maxer</div>
-                <div class="main-center-content__item-text paragraph">
+                <div class="main-center__item-text heading">The best looks; Top comfort</div>
+                <div class="main-center__item-text name">Comfy Maxer</div>
+                <div class="main-center__item-text paragraph">
                     Our shoes fuse together an insole that cushions every move,
                     laces that you’ll never need to tie again,
                     and an odor-fighting copper thread lining.
@@ -46,7 +45,6 @@
                         <div class="main-center-buttons-container__item-text">Watch Intro</div>
                     </div>
                 </div>
-            </div>
         </div>
         <div class="main-number">94</div>
         <div class="main-right-navbar">
