--- a/src/template.html
+++ b/src/template.html
@@ -94,8 +94,8 @@
                     </div>
                 </div>
             </div>
-<!--            <div class="swiper-pagination"></div>-->
-            <div class="swiper-scrollbar"></div>
+            <div class="swiper-pagination"></div>
+
         </div>
 
     </div>
