--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,11 @@
     <div class="header">
         <div class="header-logo">zainoo</div>
         <div class="header-menu">
-            <span class="header-menu__item material-icons burger">menu</span>
+            <button class="hamburger hamburger--spring is-active" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
             <span class="header-menu__item material-icons">search</span>
             <span class="header-menu__item material-icons cart">shopping_cart
             <div class="header-menu__item-card-count">1</div>
