--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="header-logo">zainoo</div>
         <div class="header-menu">
-            <button class="hamburger hamburger--spring is-active" type="button">
+            <button class=" header-menu hamburger hamburger--spring" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
