span change on div

--- a/src/template.html
+++ b/src/template.html
@@ -15,15 +15,15 @@
         <div class="header-logo">zainoo</div>
         <div class="header-menu">
             <button class=" header-menu hamburger hamburger--spring" type="button">
-                <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                </span>
+                <div class="hamburger-box">
+                    <div class="hamburger-inner"></div>
+                </div>
             </button>
-            <span class="header-menu__item material-icons">search</span>
-            <span class="header-menu__item material-icons cart">shopping_cart
+            <div class="header-menu__item material-icons">search</div>
+            <div class="header-menu__item material-icons cart">shopping_cart
             <div class="header-menu__item-card-count">1</div>
-            </span>
-            <span class="header-menu__item material-icons">perm_identity</span>
+            </div>
+            <div class="header-menu__item material-icons">perm_identity</div>
         </div>
     </header>
     <main class="main">
@@ -105,75 +105,75 @@
     </main>
     <section class="section__products">
         <section class="products__container products">
-            <h2 class="products__title">Товары</h2>
+            <h2 class="products__title">Products</h2>
             <hr>
             <div class="products__items">
                 <div class="product__item">
-                    <a href="" class="products_image">
+                    <a href="#" class="products_image">
                         <img src="<%=require('./img/imgBoots.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button"> Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button"> Add to Cart</button>
                 </div>
                 <div class="product__item">
                     <a href="" class="products_image">
                         <img src="<%=require('./img/imgBootsAsics.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button"> Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button"> Add to Cart</button>
+                </div>
+                <div class="product__item">
+                    <a href="#" class="products_image">
+                        <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
+                    </a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button"> Add to Cart</button>
+                </div>
+                <div class="product__item">
+                    <a href="#" class="products_image">
+                        <img src="<%=require('./img/imgBoots.png')%>" alt="">
+                    </a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button"> Add to Cart</button>
                 </div>
                 <div class="product__item">
                     <a href="" class="products_image">
                         <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button"> Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button"> Add to Cart</button>
                 </div>
                 <div class="product__item">
                     <a href="" class="products_image">
                         <img src="<%=require('./img/imgBoots.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button"> Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button">
+                        Add to Cart</button>
                 </div>
                 <div class="product__item">
                     <a href="" class="products_image">
                         <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button"> Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button">
+                        Add to Cart</button>
                 </div>
                 <div class="product__item">
-                    <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBoots.png')%>" alt="">
-                    </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button">
-                        Add to Cart</a>
-                </div>
-                <div class="product__item">
-                    <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
-                    </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button">
-                        Add to Cart</a>
-                </div>
-                <div class="product__item">
-                    <a href="" class="products_image">
+                    <a href="#" class="products_image">
                         <img src="<%=require('./img/imgBootsAsics.png')%>" alt="">
                     </a>
-                    <a href="" class="products__name_title">Мужская обувь</a>
-                    <a href="" class="products__name">Nike Air Max 95</a>
-                    <a href="" class="products__button">
-                        Add to Cart</a>
+                    <a href="#" class="products__name title">Mens boots</a>
+                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <button class="products__button">
+                        Add to Cart</button>
                 </div>
 
             </div>
