--- a/src/template.html
+++ b/src/template.html
@@ -19,11 +19,25 @@
                     <div class="hamburger-inner"></div>
                 </div>
             </button>
-            <div class="header-menu__item material-icons">search</div>
-            <div class="header-menu__item material-icons cart">shopping_cart
-            <div class="header-menu__item-card-count">1</div>
+            <div class="header-menu__item item material-icons">search</div>
+            <div class="header-menu__item item material-icons">perm_identity</div>
+            <div class="header-menu__item cart">
+                <div class="header-menu__item item material-icons cart-q">shopping_cart
+                    <div class="header-menu__item-card-count"></div>
+                </div>
+
+                <div class="cart-content">
+                    <ul class="cart-content__list" data-simplebar>
+                    </ul>
+                    <div class="cart-content__bottom">
+                        <div class="cart-content__fullprice">
+                            <span>All:</span>
+                            <span class="fullprice"></span>
+                        </div>
+                        <button class="cart-content__btn">To Cart</button>
+                    </div>
+                </div>
             </div>
-            <div class="header-menu__item material-icons">perm_identity</div>
         </div>
     </header>
     <main class="main">
@@ -108,75 +122,85 @@
             <h2 class="products__title">Products</h2>
             <hr>
             <div class="products__items">
-                <div class="product__item">
+                <article class="product__item">
                     <a href="#" class="products_image">
-                        <img src="<%=require('./img/imgBoots.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">10 000</div>
                     <button class="products__button"> Add to Cart</button>
-                </div>
-                <div class="product__item">
+                </article>
+                <article class="product__item">
                     <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBootsAsics.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">12 000</div>
                     <button class="products__button"> Add to Cart</button>
-                </div>
-                <div class="product__item">
+                </article>
+                <article class="product__item">
                     <a href="#" class="products_image">
-                        <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">9 000</div>
                     <button class="products__button"> Add to Cart</button>
-                </div>
-                <div class="product__item">
+                </article>
+                <article class="product__item">
                     <a href="#" class="products_image">
-                        <img src="<%=require('./img/imgBoots.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">7 000</div>
                     <button class="products__button"> Add to Cart</button>
-                </div>
-                <div class="product__item">
+                </article>
+                <article class="product__item">
                     <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">18 000</div>
                     <button class="products__button"> Add to Cart</button>
-                </div>
-                <div class="product__item">
+                </article>
+                <article class="product__item">
                     <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBoots.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">10 000</div>
                     <button class="products__button">
-                        Add to Cart</button>
-                </div>
-                <div class="product__item">
+                        Add to Cart
+                    </button>
+                </article>
+                <article class="product__item">
                     <a href="" class="products_image">
-                        <img src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">19 000</div>
                     <button class="products__button">
-                        Add to Cart</button>
-                </div>
-                <div class="product__item">
+                        Add to Cart
+                    </button>
+                </article>
+                <article class="product__item">
                     <a href="#" class="products_image">
-                        <img src="<%=require('./img/imgBootsAsics.png')%>" alt="">
+                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">
                     </a>
-                    <a href="#" class="products__name title">Mens boots</a>
-                    <a href="#" class="products__name">Nike Air Max 95</a>
+                    <div class="products__name">Mens boots</div>
+                    <div class="products__name_title">Nike Air Max 95</div>
+                    <div class="product__price">5 000</div>
                     <button class="products__button">
-                        Add to Cart</button>
+                        Add to Cart
+                    </button>
+                </article>
                 </div>
-
-            </div>
         </section>
     </section>
     <footer class="footer">
