--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="cart-content">
-                    <ul class="cart-content__list" data-simplebar>
+                    <ul class="cart-content__list">
                     </ul>
                     <div class="cart-content__bottom">
                         <div class="cart-content__fullprice">
