--- a/src/template.html
+++ b/src/template.html
@@ -21,12 +21,14 @@
             </button>
             <div class="header-menu__item item material-icons">search</div>
             <div class="header-menu__item item material-icons">perm_identity</div>
-            <div class="header-menu__item cart">
-                <div class="header-menu__item item material-icons cart-q">shopping_cart
-                    <div class="header-menu__item-card-count"></div>
+            <div class="header-menu__item cart ">
+                <div class="cart-q">
+<!--                <div class="header-menu__item item material-icons cart-q">-->
+
+<!--                </div>-->
                 </div>
 
-                <div class="cart-content">
+                <div class="cart-content active">
                     <ul class="cart-content__list">
                     </ul>
                     <div class="cart-content__bottom">
