change errors for linters

--- a/src/template.html
+++ b/src/template.html
@@ -29,8 +29,11 @@
                 </div>
 
                 <div class="cart-content active">
-                    <ul class="cart-content__list">
-                    </ul>
+                    <div class="cart-content__top">
+
+                    </div>
+<!--                    <ul class="cart-content__list">-->
+<!--                    </ul>-->
                     <div class="cart-content__bottom">
                         <div class="cart-content__fullprice">
                             <span>All:</span>
