--- a/src/template.html
+++ b/src/template.html
@@ -23,23 +23,16 @@
             <div class="header-menu__item item material-icons">perm_identity</div>
             <div class="header-menu__item cart ">
                 <div class="cart-q">
-<!--                <div class="header-menu__item item material-icons cart-q">-->
-
-<!--                </div>-->
                 </div>
-
-                <div class="cart-content active">
-                    <div class="cart-content__top">
-
-                    </div>
-<!--                    <ul class="cart-content__list">-->
-<!--                    </ul>-->
+                <div class="cart-content">
+                    <ul class="cart-content__list">
+                    </ul>
                     <div class="cart-content__bottom">
                         <div class="cart-content__fullprice">
                             <span>All:</span>
                             <span class="fullprice"></span>
                         </div>
-                        <button class="cart-content__btn">To Cart</button>
+                        <button class="cart-content__btn products__button">To Cart</button>
                     </div>
                 </div>
             </div>
@@ -121,91 +114,92 @@
             </div>
             <div class="swiper-pagination"></div>
         </section>
+
     </main>
     <section class="section__products">
         <section class="products__container products">
             <h2 class="products__title">Products</h2>
             <hr>
             <div class="products__items">
-<!--                <article class="product__item">-->
-<!--                    <a href="#" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">10 000</div>-->
-<!--                    <button class="products__button"> Add to Cart</button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">12 000</div>-->
-<!--                    <button class="products__button"> Add to Cart</button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="#" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">9 000</div>-->
-<!--                    <button class="products__button"> Add to Cart</button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="#" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">7 000</div>-->
-<!--                    <button class="products__button"> Add to Cart</button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">18 000</div>-->
-<!--                    <button class="products__button"> Add to Cart</button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">10 000</div>-->
-<!--                    <button class="products__button">-->
-<!--                        Add to Cart-->
-<!--                    </button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">19 000</div>-->
-<!--                    <button class="products__button">-->
-<!--                        Add to Cart-->
-<!--                    </button>-->
-<!--                </article>-->
-<!--                <article class="product__item">-->
-<!--                    <a href="#" class="products_image">-->
-<!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
-<!--                    </a>-->
-<!--                    <div class="products__name">Mens boots</div>-->
-<!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-<!--                    <div class="product__price">5 000</div>-->
-<!--                    <button class="products__button">-->
-<!--                        Add to Cart-->
-<!--                    </button>-->
-<!--                </article>-->
-                </div>
+                <!--                <article class="product__item">-->
+                <!--                    <a href="#" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">10 000</div>-->
+                <!--                    <button class="products__button"> Add to Cart</button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">12 000</div>-->
+                <!--                    <button class="products__button"> Add to Cart</button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="#" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">9 000</div>-->
+                <!--                    <button class="products__button"> Add to Cart</button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="#" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">7 000</div>-->
+                <!--                    <button class="products__button"> Add to Cart</button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">18 000</div>-->
+                <!--                    <button class="products__button"> Add to Cart</button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">10 000</div>-->
+                <!--                    <button class="products__button">-->
+                <!--                        Add to Cart-->
+                <!--                    </button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">19 000</div>-->
+                <!--                    <button class="products__button">-->
+                <!--                        Add to Cart-->
+                <!--                    </button>-->
+                <!--                </article>-->
+                <!--                <article class="product__item">-->
+                <!--                    <a href="#" class="products_image">-->
+                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
+                <!--                    </a>-->
+                <!--                    <div class="products__name">Mens boots</div>-->
+                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
+                <!--                    <div class="product__price">5 000</div>-->
+                <!--                    <button class="products__button">-->
+                <!--                        Add to Cart-->
+                <!--                    </button>-->
+                <!--                </article>-->
+            </div>
         </section>
     </section>
     <footer class="footer">
