change shopping cart

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
           rel="stylesheet">
     <meta name="viewport"
           content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
+    <meta charset="UTF-8">
 </head>
 
 <body>
