--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
@@ -16,9 +16,9 @@
         <div class="header-logo">zainoo</div>
         <div class="header-menu">
             <button class=" header-menu hamburger hamburger--spring" type="button">
-                <div class="hamburger-box">
-                    <div class="hamburger-inner"></div>
-                </div>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
             </button>
             <div class="header-menu__item item material-icons">search</div>
             <div class="header-menu__item item material-icons">perm_identity</div>
@@ -122,84 +122,6 @@
             <h2 class="products__title">Products</h2>
             <hr>
             <div class="products__items">
-                <!--                <article class="product__item">-->
-                <!--                    <a href="#" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">10 000</div>-->
-                <!--                    <button class="products__button"> Add to Cart</button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">12 000</div>-->
-                <!--                    <button class="products__button"> Add to Cart</button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="#" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">9 000</div>-->
-                <!--                    <button class="products__button"> Add to Cart</button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="#" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">7 000</div>-->
-                <!--                    <button class="products__button"> Add to Cart</button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">18 000</div>-->
-                <!--                    <button class="products__button"> Add to Cart</button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBoots.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">10 000</div>-->
-                <!--                    <button class="products__button">-->
-                <!--                        Add to Cart-->
-                <!--                    </button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAdidas.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">19 000</div>-->
-                <!--                    <button class="products__button">-->
-                <!--                        Add to Cart-->
-                <!--                    </button>-->
-                <!--                </article>-->
-                <!--                <article class="product__item">-->
-                <!--                    <a href="#" class="products_image">-->
-                <!--                        <img class="product_image img" src="<%=require('./img/imgBootsAsics.png')%>" alt="">-->
-                <!--                    </a>-->
-                <!--                    <div class="products__name">Mens boots</div>-->
-                <!--                    <div class="products__name_title">Nike Air Max 95</div>-->
-                <!--                    <div class="product__price">5 000</div>-->
-                <!--                    <button class="products__button">-->
-                <!--                        Add to Cart-->
-                <!--                    </button>-->
-                <!--                </article>-->
             </div>
         </section>
     </section>
